--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "metro-map",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "server/server.js",
   "private": "true",
+  "type": "module",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server",
+    "server:dev": "node server/server.js",
+    "client:dev": "webpack-dev-server",
+    "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +26,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
+    "@babel/register": "^7.25.9",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "style-loader": "^4.0.0",
@@ -31,7 +35,11 @@
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
+    "concurrently": "^9.1.2",
     "copy-webpack-plugin": "^13.0.0",
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "rxjs": "^7.8.2"
   }
 }
