--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "server:dev": "node server/server.js",
     "client:dev": "webpack-dev-server",
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && npm run dev"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/karina-peters/metro-map.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Karina Peters",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/karina-peters/metro-map/issues"
@@ -39,7 +39,9 @@
     "copy-webpack-plugin": "^13.0.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "html-webpack-plugin": "^5.6.3",
     "node-fetch": "^3.3.2",
+    "p5": "^1.11.3",
     "rxjs": "^7.8.2"
   }
 }
