--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "concurrently": "^9.1.2",
     "copy-webpack-plugin": "^13.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
